OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c.object
<CustomObject>
    <description>Central object tracking an onboarding request for a Dealer (Account) and Vendor Program combination. Each record represents one dealer&apos;s onboarding journey for a specific vendor program, tracking status, requirements, and progress. Example: When Account &quot;ABC Dealer Services&quot; starts onboarding for Vendor Program &quot;Verizon Fios D2D&quot;, an Onboarding record is created with Account__c=&quot;ABC Dealer Services&quot; and Vendor_Customization__c=&quot;Verizon Fios D2D&quot;. The Onboarding_Status__c field is updated from onboarding requirement data using custom metadata (Onboarding_Status_Normalization__mdt, Onboarding_Status_Evaluation_Rule__mdt) and OnboardingStatusEvaluatorService, invoked from automation when requirements change. External overrides can temporarily disable automatic status updates for manual control.</description>
    <label>Onboarding</label>
    <nameField>
        <displayFormat>ONB-{00000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>