OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan</label>
    <referenceTo>ActionPlan</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>