OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>