OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Adobe Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdobeAgreementStatusValues</valueSetName>
    </valueSet>
</CustomField>