OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Agreement_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status_TEMP__c</fullName>
    <formula>Text( Contract__r.Agreement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Status (TEMP)</label>
    <type>Text</type>
</CustomField>