OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <default>true</default>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>