OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Auto_Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Insurance_Expiration_Date__c</fullName>
    <formula>Dealer_Insurance__r.Commerical_Automobile_Exp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>