OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Auto_Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Insurance_Status__c</fullName>
    <formula>TEXT(Dealer_Insurance__r.Commercial_Automobile_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Insurance Status</label>
    <type>Text</type>
</CustomField>