OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Background Check</label>
    <referenceTo>Background_Check__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>