OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Background_Check_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status_TEMP__c</fullName>
    <formula>text(Contract__r.Background_Check__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Check Status (TEMP)</label>
    <type>Text</type>
</CustomField>