OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Background_Check_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status_Text__c</fullName>
    <formula>TEXT(Background_Check_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Check Status Text</label>
    <type>Text</type>
</CustomField>