OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Business_License_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Status_TEMP__c</fullName>
    <formula>text( Contract__r.Business_License__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business License Status (TEMP)</label>
    <type>Text</type>
</CustomField>