OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Chuzo_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chuzo Agreement</label>
    <referenceTo>Chuzo_Agreement__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>