OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Clearing_House_Status__c.field-meta.xml
<CustomField>
    <fullName>Clearing_House_Status__c</fullName>
    <label>ACH Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Onboarding Approved</fullName>
            </value>
            <value>
                <fullName>Accounting Approved</fullName>
            </value>
            <value>
                <fullName>Accounting Denied</fullName>
            </value>
            <value>
                <fullName>Check Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>