OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Clearing_House_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Clearing_House_Status_TEMP__c</fullName>
    <formula>text( Contract__r.ACH__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clearing House Status (TEMP)</label>
    <type>Text</type>
</CustomField>