OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>Dealer_Compliance__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>