OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Compliance_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status_TEMP__c</fullName>
    <formula>text( Contract__r.Compliance_Application_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Status (TEMP)</label>
    <type>Text</type>
</CustomField>