OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Compliance_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status_Text__c</fullName>
    <formula>TEXT( Compliance_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Status Text</label>
    <type>Text</type>
</CustomField>