OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
                <label>Complete</label>
            </value>
            <value>
                <fullName>In Approval Process</fullName>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>