OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Contract_W9_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_W9_Status__c</fullName>
    <formula>TEXT( Contract__r.W9__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract W9 Status (TEMP)</label>
    <type>Text</type>
</CustomField>