OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Creation_of_Record_Completed__c.field-meta.xml
<CustomField>
    <fullName>Creation_of_Record_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creation of Record Completed</label>
    <type>Checkbox</type>
</CustomField>