OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Check</label>
    <referenceTo>Credit_Check__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>