OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Credit_Check_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Status_TEMP__c</fullName>
    <formula>TEXT( Contract__r.Credit_Check__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Check Status (TEMP)</label>
    <type>Text</type>
</CustomField>