OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Dealer_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>Dealer_Insurance__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>