OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Dealer_Insurance_Detail__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Insurance_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Insurance Detail</label>
    <referenceTo>Dealer_Insurance_Detail__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>