OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Drivers_Licenses_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Licenses_Status_TEMP__c</fullName>
    <formula>text( Contract__r.Drivers_License__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drivers Licenses Status (TEMP)</label>
    <type>Text</type>
</CustomField>