OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/ERP_Setup_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>ERP_Setup_Status_TEMP__c</fullName>
    <formula>text( Contract__r.AX_Setup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Setup Status (TEMP)</label>
    <type>Text</type>
</CustomField>