OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/External_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Override_Date__c</fullName>
    <label>External Override Date</label>
    <type>DateTime</type>
</CustomField>