OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/External_Override_Enabled__c.field-meta.xml
<CustomField>
    <fullName>External_Override_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Override Enabled</label>
    <type>Checkbox</type>
</CustomField>