OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/External_Override_Programs__c.field-meta.xml
<CustomField>
    <fullName>External_Override_Programs__c</fullName>
    <label>External Override Programs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>