OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/General_Liability_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_Expiration_Date__c</fullName>
    <formula>Dealer_Insurance__r.Commercial_General_Liability_Exp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Liability Expiration Date</label>
    <type>Date</type>
</CustomField>