OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/General_Liability_Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_Insurance_Status__c</fullName>
    <formula>TEXT(Dealer_Insurance__r.Commercial_General_Liability_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Liability Insurance Status</label>
    <type>Text</type>
</CustomField>