OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Insurance_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status_TEMP__c</fullName>
    <formula>TEXT( Contract__r.Insurance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Status (TEMP)</label>
    <type>Text</type>
</CustomField>