OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/LearnUpon_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>LearnUpon_Training_Status__c</fullName>
    <description>These are for tracking the status of Learn Upon on Accounts.</description>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>