OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/LearnUpon_Triggered__c.field-meta.xml
<CustomField>
    <fullName>LearnUpon_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this record box is checked, LearnUpon has been triggered for this onboarding record.</description>
    <inlineHelpText>This box should be automatically checked when the Contract Status is set to &quot;In Approval Process&quot;. Do not select this box unless it&apos;s absolutely necessary.</inlineHelpText>
    <label>LearnUpon Triggered</label>
    <type>Checkbox</type>
</CustomField>