OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/LearnUponContactEnrollment__c.field-meta.xml
<CustomField>
    <fullName>LearnUponContactEnrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnUponContactEnrollment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>LearnUponP__LearnUponContactEnrollment__c.LearnUponP__SFContact__r.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LearnUponP__LearnUponContactEnrollment__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>