OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Net Terms</label>
    <referenceTo>Net_Terms__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>