OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Onb_Reqs_Awaiting_Approval__c.field-meta.xml
<CustomField>
    <fullName>Onb_Reqs_Awaiting_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, additional Vendor_Program_Requirement__c rows are waiting to become Onboarding_Requirement__c until agreement (or other CMDT Block_Action) approval completes.</description>
    <label>Onboarding Reqs Awaiting Approval</label>
    <type>Checkbox</type>
</CustomField>