OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Onboarding_Rep__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Rep__c</fullName>
    <formula>Territory_Assignments__r.Onboarding_Rep__r.FirstName &amp; &quot; &quot; &amp;  Territory_Assignments__r.Onboarding_Rep__r.LastName</formula>
    <label>Onboarding Rep</label>
    <type>Text</type>
</CustomField>