OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>