OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Onboarding_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status_TEMP__c</fullName>
    <formula>Text( Contract__r.Application_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status (TEMP)</label>
    <type>Text</type>
</CustomField>