OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Type__c</fullName>
    <label>Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Dealer</fullName>
            </value>
            <value>
                <fullName>Infrastructure Dealer</fullName>
            </value>
            <value>
                <fullName>Vendor Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>