OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>Text(Opportunity__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>