OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Personal_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Guarantee</label>
    <referenceTo>Personal_Guarantee__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>